tests/fsharp/typeProviders/negTests/neg4.bsl

neg4.fsx(7,25,7,44): typecheck error FS3062: This type test with a provided type 'HelloWorldType' is not allowed because this provided type will be erased to 'System.Object' at runtime.

neg4.fsx(10,25,10,68): typecheck error FS3060: This type test or downcast will erase the provided type 'HelloWorldType' to the type 'System.Object'

neg4.fsx(13,25,13,45): typecheck error FS3061: This downcast will erase the provided type 'HelloWorldType' to the type 'System.Object'.

neg4.fsx(16,25,16,69): typecheck error FS3060: This type test or downcast will erase the provided type 'HelloWorldType' to the type 'System.Object'

neg4.fsx(19,25,19,48): typecheck error FS3061: This downcast will erase the provided type 'HelloWorldSubType' to the type 'System.Object'.

neg4.fsx(22,25,22,50): typecheck error FS3061: This downcast will erase the provided type 'HelloWorldException' to the type 'System.Exception'.

neg4.fsx(25,25,25,53): typecheck error FS3061: This downcast will erase the provided type 'HelloWorldSubException' to the type 'System.Exception'.

neg4.fsx(30,5,30,22): typecheck error FS3062: This type test with a provided type 'HelloWorldType' is not allowed because this provided type will be erased to 'System.Object' at runtime.

neg4.fsx(36,5,36,28): typecheck error FS3060: This type test or downcast will erase the provided type 'HelloWorldType' to the type 'System.Object'

neg4.fsx(42,16,42,33): typecheck error FS3063: Cannot inherit from erased provided type

neg4.fsx(42,16,42,33): typecheck error FS3063: Cannot inherit from erased provided type

neg4.fsx(47,16,47,33): typecheck error FS3063: Cannot inherit from erased provided type

neg4.fsx(47,16,47,33): typecheck error FS3063: Cannot inherit from erased provided type

neg4.fsx(52,25,52,42): typecheck error FS3063: Cannot inherit from erased provided type
